# Blockchaininfo

./: .gitignore  CHANGELOG.md  Cargo.toml  HASHPHASE.md  LICENSE  README.md  ROADMAP.md  error_log.txt  error_log_20251128_193633.txt  miners.json  node_metrics_overview.md
benches/: benchmark.rs
docs/: FGMO.md
docs/patterns/: custom_bitcoin_models.md  independent_async_sections.md  semaphore_pipeline.md
src/: alarm.rs  config.rs  consensus.rs  display.rs  lib.rs  main.rs  models.rs  rpc.rs  runapp.rs  utils.rs
src/consensus/: satoshi_math.rs
src/display/: display_blockchain_info.rs  display_consensus_security_info.rs  display_mempool_info.rs  display_network_info.rs
src/models/: block_info.rs  blockchain_info.rs  chaintips_info.rs  errors.rs  flashing_text.rs  mempool_info.rs  miner_tags.rs  network_info.rs  network_totals.rs  peer_info.rs  transaction_info.rs
src/rpc/: block.rs  blockchain.rs  chain_tips.rs  client.rs  getnetworkhashps.rs  initial_mempool_distro.rs  mempool.rs  mempool_distro.rs  mempool_distro_bkupgood.rs  mempool_distro_v1.rs  network.rs  network_peers.rs  network_totals.rs  transaction.rs
src/ui/: colors.rs  mod.rs  spinner.rs
