[package]
name = "blockchaininfo"
version = "0.3.3"
edition = "2021"
readme = "README.md"
repository = "https://github.com/TH3BAT/Blockchaininfo"
license = "MIT"
authors = ["B. Farley <bfarley68@gmail.com>"]
description = "Live terminal dashboard tracking critical Bitcoin metrics."
keywords = [
  "terminal",
  "dashboard",
  "RPC",
  "bitcoin",
  "full-node",
  "RPC",
]

[[bench]]
name = "benchmark"
harness = false

[dev-dependencies]
blockchaininfo = { path = "."}
criterion = "0.6.0"

[lib]
name = "blockchaininfo"
path = "src/lib.rs"

[[bin]]
name = "blockchaininfo"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
reqwest = {version = "0.12.22", features = ["json", "rustls-tls"] }
serde_json = "1.0.141"
serde = {version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
toml = "0.9.2"
num-format = "0.4.4"
colored = "3.0.0"
crossterm = "0.29.0"
tui = "0.19.0"
regex = "1.11.1"
rand = "0.9.2"
once_cell = "1.21.3"
futures = "0.3.31"
dashmap = "6.1.0"
lazy_static = "1.4"
hex = "0.4.3"
