[package]
name = "blockchaininfo"
version = "1.2.1"
edition = "2021"
description = "Live terminal dashboard tracking critical Bitcoin metrics."
readme = "README.md"
repository = "https://github.com/TH3BAT/Blockchaininfo"
license = "MIT"
authors = ["B. Farley <bfarley68@gmail.com>"]
keywords = [
  "terminal",
  "dashboard",
  "RPC",
  "bitcoin",
  "full-node",
]

[[bin]]
name = "blockchaininfo"
path = "src/main.rs"

[lib]
name = "blockchaininfo"
path = "src/lib.rs"

# Benchmarks
[[bench]]
name = "benchmark"
harness = false

[dev-dependencies]
criterion = "0.7.0"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json", "socks", "rustls-tls"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.42"
toml = "0.9.8"
num-format = "0.4.4"
colored = "3.0.0"
crossterm = "0.29.0"
tui = "0.19.0"
regex = "1.12.2"
rand = "0.9.2"
once_cell = "1.21.3"
futures = "0.3.31"
dashmap = "6.1.0"
lazy_static = "1.4"
hex = "0.4.3"
