[package]
name = "blockchaininfo"
version = "1.2.8"
edition = "2021"
description = "Live terminal dashboard tracking critical Bitcoin metrics."
readme = "README.md"
repository = "https://github.com/TH3BAT/Blockchaininfo"
license = "MIT"
authors = ["B. Farley <bfarley68@gmail.com>"]
keywords = [
  "terminal",
  "dashboard",
  "RPC",
  "bitcoin",
  "full-node",
]

[[bin]]
name = "blockchaininfo"
path = "src/main.rs"

[lib]
name = "blockchaininfo"
path = "src/lib.rs"

# Benchmarks
[[bench]]
name = "benchmark"
harness = false

[dev-dependencies]
criterion = "0.8.1"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }

# reqwest 0.13+ breaks Tor-based RPC stability.
# Pinned intentionally.
reqwest = { version = "0.12.24", features = ["json", "socks", "rustls-tls"] }

serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.43"
toml = "0.9.8"
num-format = "0.4.4"
colored = "3.1.1"
crossterm = "0.29.0"
tui = "0.19.0"
regex = "1.12.2"
rand = "0.9.2"
once_cell = "1.21.3"
futures = "0.3.31"
dashmap = "6.1.0"
lazy_static = "1.4"
hex = "0.4.3"
rpassword = "7.4.0"
unicode-width = "0.2.2"
